--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,7 @@
         <module>thred-create-demo</module>
         <module>miaosha-duoxiancheng-demo</module>
         <module>codegenerator</module>
+        <module>java-basic-bixiangdong-SE</module>
     </modules>
 
 
